estructura de carpetas

--- a/logic/main.ipynb
+++ b/logic/main.ipynb
@@ -30,7 +30,7 @@
     }
    ],
    "source": [
-    "datos=pd.read_excel(\"data/data.xlsx\")\n",
+    "datos=pd.read_excel(\"logic/data/data.xlsx\")\n",
     "print(datos)"
    ]
   },
